# app/Models/User.php
@@ -6,10 +6,11 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Sanctum\HasApiTokens;
 
 class User extends Authenticatable
 {
-    use HasFactory, Notifiable;
+    use HasApiTokens, HasFactory, Notifiable;
 
     protected $fillable = [
         'name',
@@ -32,8 +33,23 @@ class User extends Authenticatable
 
     public function ceps()
     {
-        return $this->belongsToMany(Cep::class, 'cep_user')
-            ->withPivot('label')
+        return $this->belongsToMany(Cep::class, 'cep_user_pivot')
+            ->withPivot('nickname')
             ->withTimestamps();
+    }
+
+    public function addToFavorites(Cep $cep, string $nickname)
+    {
+        return $this->ceps()->attach($cep->id, ['nickname' => $nickname]);
+    }
+
+    public function removeFromFavorites(Cep $cep)
+    {
+        return $this->ceps()->detach($cep->id);
+    }
+
+    public function isFavorite(Cep $cep): bool
+    {
+        return $this->ceps->contains($cep);
     }
 }
